--- a/public/editoras.html
+++ b/public/editoras.html
@@ -17,6 +17,7 @@
             <li><a href="editoras.html">Editoras</a></li>
             <li><a href="autores.html">Autores</a></li>
             <li><a href="libros.html">Libros</a></li>
+            <li><a href="empleados.html">Empleados</a></li> <!-- Corregido -->
         </ul>
     </nav>
   </header>
