--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
         <li><a href="editoras.html">Editoras</a></li>
         <li><a href="autores.html">Autores</a></li>
         <li><a href="libros.html">Libros</a></li>
+        <li><a href="empleados.html">Empleados</a></li> <!-- Corregido -->
       </ul>
     </nav>
   </header>
@@ -36,4 +37,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
